# uav_data_get

./: CMakeLists.txt  CMakeLists.txt~  README  README.md  README~  package.xml  package.xml~
data/: PID_all_state_0.3_noise_tracking.txt  PID_all_state_0.3_noise_tracking_lem.txt  PID_all_state_0.5_noise_tracking.txt  PID_all_state_0.5_noise_tracking_lem.txt  PID_all_state_0.8_mass_tracking.txt  PID_all_state_0.8_mass_tracking_lem.txt  PID_all_state_0.9_mass_tracking.txt  PID_all_state_1.1_mass_tracking.txt  PID_all_state_1.2_mass_tracking.txt  PID_all_state_1.3_mass_tracking.txt  PID_all_state_1.4_mass_tracking.txt  PID_all_state_1.4_mass_tracking_lem.txt  PID_all_state_1.5_mass_tracking.txt  PID_all_state_normal_tracking.txt  PID_all_state_normal_tracking_lem.txt  lqr_gazebo.txt  lqr_gazebo_1.5_mass.txt  position_data.txt  position_data_PID_0.7_mass.txt  position_data_PID_1.3_mass.txt  position_data_PID_all_state_orientation_wrong.txt  position_data_PID_normal.txt  position_data_ground_truth.txt  position_data_sensor.txt
src/: position_data.cpp  position_data.cpp~
